--- a/Element-Classification-With-Feature-Engineering/inference.ipynb
+++ b/Element-Classification-With-Feature-Engineering/inference.ipynb
@@ -2,11 +2,62 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100    17  100    17    0     0     23      0 --:--:-- --:--:-- --:--:--    23\n",
+      "100    17  100    17    0     0     23      0 --:--:-- --:--:-- --:--:--    23\n",
+      "\n",
+      "100   491    0   491    0     0    307      0 --:--:--  0:00:01 --:--:--   307\n",
+      "100   491    0   491    0     0    305      0 --:--:--  0:00:01 --:--:--     0\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:--  0:00:02 --:--:--     0\n",
+      "  2 90.1M    2 2400k    0     0   743k      0  0:02:04  0:00:03  0:02:01 2752k\n",
+      "  5 90.1M    5 5328k    0     0  1249k      0  0:01:13  0:00:04  0:01:09 2790k\n",
+      "  8 90.1M    8 8240k    0     0  1574k      0  0:00:58  0:00:05  0:00:53 2863k\n",
+      " 12 90.1M   12 11.0M    0     0  1805k      0  0:00:51  0:00:06  0:00:45 2900k\n",
+      " 15 90.1M   15 14.0M    0     0  1987k      0  0:00:46  0:00:07  0:00:39 2949k\n",
+      " 18 90.1M   18 16.9M    0     0  2103k      0  0:00:43  0:00:08  0:00:35 2981k\n",
+      " 21 90.1M   21 19.7M    0     0  2193k      0  0:00:42  0:00:09  0:00:33 3004k\n",
+      " 24 90.1M   24 22.3M    0     0  2241k      0  0:00:41  0:00:10  0:00:31 2939k\n",
+      " 28 90.1M   28 25.3M    0     0  2307k      0  0:00:39  0:00:11  0:00:28 2934k\n",
+      " 31 90.1M   31 28.3M    0     0  2370k      0  0:00:38  0:00:12  0:00:26 2924k\n",
+      " 33 90.1M   33 30.4M    0     0  2355k      0  0:00:39  0:00:13  0:00:26 2768k\n",
+      " 36 90.1M   36 33.0M    0     0  2378k      0  0:00:38  0:00:14  0:00:24 2720k\n",
+      " 39 90.1M   39 36.0M    0     0  2418k      0  0:00:38  0:00:15  0:00:23 2780k\n",
+      " 43 90.1M   43 38.7M    0     0  2447k      0  0:00:37  0:00:16  0:00:21 2763k\n",
+      " 46 90.1M   46 41.8M    0     0  2478k      0  0:00:37  0:00:17  0:00:20 2737k\n",
+      " 49 90.1M   49 44.6M    0     0  2510k      0  0:00:36  0:00:18  0:00:18 2921k\n",
+      " 52 90.1M   52 47.4M    0     0  2520k      0  0:00:36  0:00:19  0:00:17 2922k\n",
+      " 55 90.1M   55 50.2M    0     0  2541k      0  0:00:36  0:00:20  0:00:16 2916k\n",
+      " 59 90.1M   59 53.4M    0     0  2559k      0  0:00:36  0:00:21  0:00:15 2909k\n",
+      " 62 90.1M   62 55.9M    0     0  2576k      0  0:00:35  0:00:22  0:00:13 2921k\n",
+      " 64 90.1M   64 58.0M    0     0  2557k      0  0:00:36  0:00:23  0:00:13 2729k\n",
+      " 67 90.1M   67 60.8M    0     0  2571k      0  0:00:35  0:00:24  0:00:11 2769k\n",
+      " 70 90.1M   70 63.7M    0     0  2585k      0  0:00:35  0:00:25  0:00:10 2764k\n",
+      " 73 90.1M   73 66.2M    0     0  2577k      0  0:00:35  0:00:26  0:00:09 2655k\n",
+      " 76 90.1M   76 69.1M    0     0  2600k      0  0:00:35  0:00:27  0:00:08 2707k\n",
+      " 80 90.1M   80 72.2M    0     0  2619k      0  0:00:35  0:00:28  0:00:07 2908k\n",
+      " 83 90.1M   83 75.0M    0     0  2629k      0  0:00:35  0:00:29  0:00:06 2912k\n",
+      " 86 90.1M   86 77.6M    0     0  2631k      0  0:00:35  0:00:30  0:00:05 2864k\n",
+      " 89 90.1M   89 80.5M    0     0  2641k      0  0:00:34  0:00:31  0:00:03 2985k\n",
+      " 92 90.1M   92 83.5M    0     0  2651k      0  0:00:34  0:00:32  0:00:02 2924k\n",
+      " 95 90.1M   95 86.0M    0     0  2648k      0  0:00:34  0:00:33  0:00:01 2808k\n",
+      " 98 90.1M   98 88.5M    0     0  2648k      0  0:00:34  0:00:34 --:--:-- 2758k\n",
+      "100 90.1M  100 90.1M    0     0  2650k      0  0:00:34  0:00:34 --:--:-- 2778k\n"
+     ]
+    }
+   ],
    "source": [
-    "#You may download weights from here https://www.dropbox.com/scl/fi/tcdyhar7u5ru53lct3nr5/cls_model.pth?rlkey=ctyuiet6ralm5rqvzmkt46z4p&st=vkjyd0wz&dl=0"
+    "!curl -L -o cls_model.pth \"https://www.dropbox.com/scl/fi/tcdyhar7u5ru53lct3nr5/cls_model.pth?rlkey=ctyuiet6ralm5rqvzmkt46z4p&st=vkjyd0wz&dl=0\""
    ]
   },
   {
@@ -237,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
